--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/swiper": "^5.4.3",
     "aos": "^2.3.4",
     "axios": "^1.8.3",
+    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
@@ -25,6 +27,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/aos": "^3.0.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
