--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/swiper": "^5.4.3",
     "aos": "^2.3.4",
     "axios": "^1.8.3",
+    "framer-motion": "^12.6.2",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
