--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "@types/lodash": "^4.17.16",
     "@types/swiper": "^5.4.3",
     "aos": "^2.3.4",
     "axios": "^1.8.3",
     "framer-motion": "^12.6.2",
+    "lodash": "^4.17.21",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
