--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
     "@tailwindcss/cli": "^4.1.2",
     "@tailwindcss/vite": "^4.1.2",
     "@types/lodash": "^4.17.16",
