add print invoic button

--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@types/lodash": "^4.17.16",
     "@types/swiper": "^5.4.3",
     "aos": "^2.3.4",
+    "arabic": "^1.0.3",
+    "arabic-utils": "^6.0.1",
     "axios": "^1.8.3",
     "framer-motion": "^12.6.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
