--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/cli": "^4.1.2",
     "@tailwindcss/vite": "^4.1.2",
     "@types/lodash": "^4.17.16",
+    "@types/node": "^22.15.18",
     "@types/swiper": "^5.4.3",
     "axios": "^1.8.3",
     "framer-motion": "^12.6.2",
@@ -28,7 +29,8 @@
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "web-vitals": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
